--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
